--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "material-react",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "",
-  "main": "./src",
+  "main": "./lib",
   "keywords": [
     "react",
     "material design",
@@ -15,48 +15,58 @@
   },
   "scripts": {
     "start": "start-storybook -p 9001",
+    "scss": "node-sass ./src --output ./dist",
     "scsslint": "sass-lint -v --no-exit || true",
-    "lint": "eslint src/**/*.js src/**/*.jsx"
+    "lint": "eslint src/**/*.js src/**/*.jsx",
+    "babel": "babel ./src --out-dir ./dist",
+    "build": "cross-env NODE_ENV=production npm run babel && npm run scss",
+    "clean": "rimraf ./dist",
+    "prebuild": "npm run clean",
+    "prepublish": "npm run build"
   },
   "author": "Valentin Mocanu <mr_vali@yahoo.ro> (http://rontavstudio.com)",
   "license": "MIT",
   "devDependencies": {
     "@kadira/storybook": "^2.3.0",
     "autoprefixer": "^6.3.4",
+    "babel-cli": "^6.11.4",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.13.0",
+    "classnames": "^2.2.5",
+    "cross-env": "^2.0.0",
+    "css-loader": "^0.23.1",
     "eslint": "^2.10.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^5.1.1",
+    "exports-loader": "^0.6.3",
+    "expose-loader": "^0.7.1",
+    "font-awesome": "^4.6.3",
+    "imports-loader": "^0.6.5",
+    "jquery": "^2.2.2",
+    "jsx-loader": "^0.13.2",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "node-sass": "^3.6.0",
     "nodemon": "^1.9.2",
     "npm-run-all": "^2.1.0",
     "postcss-loader": "^0.9.1",
     "precss": "^1.4.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
     "react-hot-loader": "^1.3.0",
+    "react-router": "^2.4.0",
+    "rimraf": "^2.5.2",
     "sass-lint": "^1.7.0",
     "sass-loader": "^3.2.0",
     "script-loader": "^0.7.0",
-    "webpack-dev-server": "^1.14.1",
-    "css-loader": "^0.23.1",
-    "exports-loader": "^0.6.3",
-    "expose-loader": "^0.7.1",
-    "imports-loader": "^0.6.5",
-    "jsx-loader": "^0.13.2",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "react-router": "^2.4.0",
-    "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "classnames": "^2.2.5",
-    "font-awesome": "^4.6.3",
-    "jquery": "^2.2.2",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "webpack-dev-server": "^1.14.1"
   },
   "peerDependencies": {
     "classnames": "^2.2.5",
