--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-react",
-  "version": "0.0.618",
+  "version": "0.0.7",
   "description": "",
   "main": "./dist",
   "keywords": [
@@ -48,7 +48,6 @@
     "expose-loader": "^0.7.1",
     "font-awesome": "^4.6.3",
     "imports-loader": "^0.6.5",
-    "jquery": "^3.1.0",
     "jsx-loader": "^0.13.2",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
@@ -65,6 +64,7 @@
     "sass-lint": "^1.7.0",
     "sass-loader": "^4.0.2",
     "script-loader": "^0.7.0",
+    "smoothscroll": "^0.2.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack-dev-server": "^1.15.1"
@@ -72,7 +72,6 @@
   "peerDependencies": {
     "classnames": "^2.2.5",
     "font-awesome": "^4.6.3",
-    "jquery": "^2.2.2",
     "react": "^15.0.2",
     "react-dom": "^15.0.2"
   }
