--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-react",
-  "version": "0.0.81",
+  "version": "0.0.82",
   "description": "",
   "main": "./dist",
   "keywords": [
@@ -71,6 +71,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "font-awesome": "^4.6.3",
+    "prop-types": "^15.5.8",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "smoothscroll": "^0.2.2"
