--- a/package.json
+++ b/package.json
@@ -23,58 +23,68 @@
     "build": "cross-env NODE_ENV=production npm run babel && npm run scss",
     "clean": "rimraf ./dist",
     "prebuild": "npm run clean",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "author": "Valentin Mocanu <mr_vali@yahoo.ro> (http://rontavstudio.com)",
   "license": "MIT",
   "devDependencies": {
     "@storybook/react": "^3.0.0",
-    "autoprefixer": "^6.4.1",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.8.0",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-1": "^6.13.0",
+    "autoprefixer": "^7.1.1",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.2",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-regenerator": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-runtime": "^6.23.0",
     "classnames": "^2.2.5",
     "copyfiles": "^1.0.0",
-    "cross-env": "^2.0.1",
-    "css-loader": "^0.25.0",
+    "cross-env": "^5.0.0",
+    "css-loader": "^0.28.4",
     "eslint": "^3.5.0",
     "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^6.2.0",
+    "eslint-plugin-react": "^7.0.1",
     "exports-loader": "^0.6.3",
     "expose-loader": "^0.7.1",
     "font-awesome": "^4.6.3",
-    "imports-loader": "^0.6.5",
+    "imports-loader": "^0.7.1",
     "jsx-loader": "^0.13.2",
     "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "node-sass": "^3.9.3",
+    "less-loader": "^4.0.4",
+    "mobx": "^3.1.11",
+    "node-sass": "^4.5.3",
     "nodemon": "^1.9.2",
-    "npm-run-all": "^3.1.0",
-    "postcss-loader": "^0.13.0",
+    "npm-run-all": "^4.0.2",
+    "postcss-loader": "^2.0.5",
     "precss": "^1.4.0",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^1.3.0",
-    "react-router": "^2.8.0",
+    "react-router": "^4.1.1",
+    "regenerator-transform": "^0.9.11",
     "rimraf": "^2.5.2",
     "sass-lint": "^1.7.0",
-    "sass-loader": "^4.0.2",
+    "sass-loader": "^6.0.5",
     "script-loader": "^0.7.0",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.18.1",
     "url-loader": "^0.5.7",
-    "webpack-dev-server": "^1.15.1"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "classnames": "^2.2.5",
     "font-awesome": "^4.6.3",
-    "prop-types": "^15.5.8",
+    "prop-types": "^15.5.10",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
-    "smoothscroll": "^0.2.2"
+    "smoothscroll": "^0.3.0"
   }
 }
