--- a/package.json
+++ b/package.json
@@ -75,6 +75,9 @@
     "sass-loader": "^6.0.5",
     "script-loader": "^0.7.0",
     "style-loader": "^0.18.1",
+    "stylelint": "^7.10.1",
+    "stylelint-config-standard": "^16.0.0",
+    "stylelint-order": "^0.4.3",
     "url-loader": "^0.5.7",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
