--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "Valentin Mocanu <mr_vali@yahoo.ro> (http://rontavstudio.com)",
   "license": "MIT",
   "devDependencies": {
+    "@storybook/addon-knobs": "^3.1.2",
     "@storybook/react": "^3.0.0",
     "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
