--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-react",
-  "version": "0.0.84",
+  "version": "0.0.85-0",
   "description": "",
   "main": "./dist",
   "keywords": [
