--- a/package.json
+++ b/package.json
@@ -28,11 +28,12 @@
   "author": "Valentin Mocanu <mr_vali@yahoo.ro> (http://rontavstudio.com)",
   "license": "MIT",
   "devDependencies": {
+    "@storybook/addon-actions": "^3.1.2",
     "@storybook/addon-knobs": "^3.1.2",
-    "@storybook/react": "^3.0.0",
+    "@storybook/react": "^3.1.3",
     "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.2",
     "babel-loader": "^7.0.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
@@ -46,40 +47,28 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.23.0",
-    "classnames": "^2.2.5",
-    "copyfiles": "^1.0.0",
-    "cross-env": "^5.0.0",
     "css-loader": "^0.28.4",
-    "eslint": "^3.5.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-react": "^7.0.1",
-    "exports-loader": "^0.6.3",
-    "expose-loader": "^0.7.1",
-    "font-awesome": "^4.6.3",
-    "imports-loader": "^0.7.1",
+    "eslint": "^4.0.0",
+    "eslint-plugin-react": "^7.1.0",
     "jsx-loader": "^0.13.2",
     "less": "^2.7.1",
     "less-loader": "^4.0.4",
-    "mobx": "^3.1.11",
     "node-sass": "^4.5.3",
     "nodemon": "^1.9.2",
     "npm-run-all": "^4.0.2",
-    "postcss-loader": "^2.0.5",
+    "postcss-loader": "^2.0.6",
     "precss": "^1.4.0",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
     "react-hot-loader": "^1.3.0",
     "react-router": "^4.1.1",
     "regenerator-transform": "^0.9.11",
     "rimraf": "^2.5.2",
-    "sass-lint": "^1.7.0",
-    "sass-loader": "^6.0.5",
+    "sass-loader": "^6.0.6",
     "script-loader": "^0.7.0",
-    "style-loader": "^0.18.1",
-    "stylelint": "^7.10.1",
+    "style-loader": "^0.18.2",
+    "stylelint": "^7.11.1",
     "stylelint-config-standard": "^16.0.0",
-    "stylelint-order": "^0.4.3",
-    "url-loader": "^0.5.7",
+    "stylelint-order": "^0.5.0",
+    "url-loader": "^0.5.9",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
@@ -87,8 +76,8 @@
     "classnames": "^2.2.5",
     "font-awesome": "^4.6.3",
     "prop-types": "^15.5.10",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "smoothscroll": "^0.3.0"
   }
 }
