Fixed build scripts

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "start": "start-storybook -p 9001",
     "build-storybook": "build-storybook",
     "scss": "copyfiles -u 1 src/**/*.scss dist/ && copyfiles -u 1 src/_variables.scss dist/",
-    "scsslint": "sass-lint -v --no-exit || true",
     "lint": "eslint src/**/*.js src/**/*.jsx",
     "babel": "babel ./src --out-dir ./dist",
     "build": "cross-env NODE_ENV=production npm run babel && npm run scss",
@@ -47,6 +46,8 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.23.0",
+    "copyfiles": "^1.2.0",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^4.0.0",
     "eslint-plugin-react": "^7.1.0",
