Fixed Stylelint errors

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,8 +6,7 @@
     "rules": {
         "order/order": [
             "declarations",
-            "rules",
-            "at-rules"
+            "rules"
         ],
         "rule-empty-line-before": [
             "always",
