--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,23 +4,43 @@
         "es6": true,
         "node": true
     },
-    "extends": ["eslint:recommended", "plugin:react/recommended"],
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended"
+    ],
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true,
             "jsx": true
         },
+        "ecmaVersion": 2017,
         "sourceType": "module"
     },
     "plugins": [
         "react"
     ],
     "rules": {
-        "indent": [0, 4],
-        "quotes": [2, "single"],
-        "semi": [1, "always"],
-        "brace-style": [2, "stroustrup"],
+        "indent": [
+            0,
+            4
+        ],
+        "quotes": [
+            2,
+            "single",
+            {
+                "avoidEscape": true,
+                "allowTemplateLiterals": true
+            }
+        ],
+        "semi": [
+            1,
+            "always"
+        ],
+        "brace-style": [
+            2,
+            "stroustrup"
+        ],
         "no-lonely-if": 2,
         "no-console": 0,
         "space-before-function-paren": 0,
@@ -29,10 +49,5 @@
         "semi-spacing": 2,
         "arrow-spacing": 2,
         "no-unused-vars": 1
-    },
-    "globals": {
-        "socket": true,
-        "io": true,
-        "$": true
     }
 }
