--- a/package.json
+++ b/package.json
@@ -29,58 +29,43 @@
   "author": "Valentin Mocanu <mr_vali@yahoo.ro> (http://rontavstudio.com)",
   "license": "MIT",
   "devDependencies": {
-    "@storybook/addon-actions": "^3.1.2",
-    "@storybook/addon-knobs": "^3.1.2",
-    "@storybook/react": "^3.1.3",
-    "autoprefixer": "^7.1.1",
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.2",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-syntax-class-properties": "^6.13.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-regenerator": "^6.24.1",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-runtime": "^6.23.0",
-    "copyfiles": "^1.2.0",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^4.0.0",
-    "eslint-plugin-react": "^7.1.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.2.0",
+    "@storybook/addon-actions": "^4.1.6",
+    "@storybook/addon-knobs": "^4.1.6",
+    "@storybook/react": "^4.1.6",
+    "autoprefixer": "^9.4.4",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
+    "copyfiles": "^2.1.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.0",
+    "eslint": "^5.12.0",
+    "eslint-plugin-react": "^7.12.3",
     "font-awesome": "^4.7.0",
-    "jsx-loader": "^0.13.2",
-    "less": "^2.7.1",
-    "less-loader": "^4.0.4",
-    "node-sass": "^4.9.2",
-    "nodemon": "^1.9.2",
-    "npm-run-all": "^4.0.2",
-    "postcss-loader": "^2.0.6",
-    "precss": "^1.4.0",
-    "react-hot-loader": "^1.3.0",
-    "react-router": "^4.1.1",
-    "regenerator-transform": "^0.9.11",
-    "rimraf": "^2.5.2",
-    "sass-loader": "^6.0.6",
-    "script-loader": "^0.7.0",
-    "style-loader": "^0.18.2",
-    "stylelint": "^7.11.1",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-order": "^0.5.0",
-    "url-loader": "^0.5.9",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
+    "react-dom": "^16.7.0",
+    "react-hot-loader": "^4.6.3",
+    "rimraf": "^2.6.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "stylelint": "^9.9.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-order": "^2.0.0",
+    "url-loader": "^1.1.2"
   },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "prop-types": "^15.5.10",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "smoothscroll": "^0.3.0"
+    "classnames": "^2.2.6",
+    "prop-types": "^15.6.2",
+    "react": "^16.7.0",
+    "smoothscroll": "^0.4.0"
   }
 }
