--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "material-react",
-  "version": "1.0.0-27",
+  "version": "1.0.2",
   "description": "",
   "main": "./dist",
   "keywords": [
@@ -32,6 +32,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-proposal-export-default-from": "^7.2.0",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
